Fix logo alignment

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -27,6 +27,10 @@ header {
 
   .logo {
     flex-grow: 1;
+
+    img {
+      vertical-align: middle;
+    }
   }
 }
 
